--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
 body {
     background-color: #355e3b !important;
 }
+
+.sidebar-bg {
+    background-color: #355e3b !important;
+    color: #355e3b !important;
+}
